// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommissionBounds  /> should match snapshot when empty 1`] = `
<body>
  <div>
    No bounds set (0% - 100%)
  </div>
</body>
`;

exports[`<CommissionBounds  /> should match snapshot with active bounds 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
}

@media only screen and (max-width:768px) {
  .c0 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c0 {
    padding: 0px;
  }
}

<body>
  <div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <span
          class="c2"
        >
          <strong>
            10% - 20%
          </strong>
           at current Epoch 50
        </span>
      </li>
    </ul>
  </div>
</body>
`;

exports[`<CommissionBounds  /> should match snapshot with provided bounds 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  font-size: 18px;
  line-height: 24px;
}

@media only screen and (max-width:768px) {
  .c0 {
    margin: 0px;
  }
}

@media only screen and (max-width:768px) {
  .c0 {
    padding: 0px;
  }
}

<body>
  <div>
    <ul
      class="c0"
    >
      <li
        class="c1"
      >
        <span
          class="c2"
        >
          10% - 20% starting from Epoch 0
        </span>
      </li>
    </ul>
  </div>
</body>
`;
